Save NTP position before the omnibox is moved

When navigating away from the NTP, the position saved should take into
account the fact that the omnibox is automatically lifted up when
focused. When navigating back to the NTP, the position restored should
be the one used before the lift of the fake omnibox.

Bug: 765151
Change-Id: I52a1d09252f2eac2ffb0fc997681d936de54c886
Reviewed-on: https://chromium-review.googlesource.com/668364
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502237}
Former-commit-id: 59916f5aa8890f08bec1183d401d81c1a404f64e