ios/chrome/browser/content_suggestions/content_suggestions_coordinator.mm
@@ -299,4 +299,12 @@
 - (void)setScrollsToTop:(BOOL)enable {
 }
 
+- (CGPoint)scrollOffset {
+  CGPoint collectionOffset =
+      self.suggestionsViewController.collectionView.contentOffset;
+  collectionOffset.y -=
+      self.headerCollectionInteractionHandler.collectionShiftingOffset;
+  return collectionOffset;
+}
+
 @end
