ios/chrome/browser/ui/content_suggestions/content_suggestions_header_synchronizer.mm
@@ -35,12 +35,6 @@ const CGFloat kShiftTilesUpAnimationDuration = 0.25;
 // Tap gesture recognizer when the omnibox is focused.
 @property(nonatomic, strong) UITapGestureRecognizer* tapGestureRecognizer;
 
-// When the omnibox is focused, this value represents the shift distance of the
-// collection needed to pin the omnibox to the top. It is 0 if the omnibox has
-// not been moved when focused (i.e. the collection was already scrolled to
-// top).
-@property(nonatomic, assign) CGFloat collectionShiftingOffset;
-
 @end
 
 @implementation ContentSuggestionsHeaderSynchronizer
@@ -86,6 +80,7 @@ initWithCollectionController:
   self.shouldAnimateHeader = YES;
 
   if (self.collectionShiftingOffset == 0 || self.collectionView.dragging) {
+    self.collectionShiftingOffset = 0;
     [self updateFakeOmniboxOnCollectionScroll];
     return;
   }
@@ -223,6 +218,7 @@ initWithCollectionController:
 
   if (percentComplete == 1.0) {
     [link invalidate];
+    self.collectionShiftingOffset = 0;
     // Reset |shiftTilesDownStartTime to its sentinel value.
     self.shiftTilesDownStartTime = -1;
   }
