ios/chrome/browser/ui/content_suggestions/ntp_home_test_utils.h
@@ -16,12 +16,19 @@ namespace ntp_home {
 // Returns nil if it is not in the view hierarchy.
 UIView* CollectionView();
 
+// Returns the view corresponding to the fake omnibox. Returns nil if it is not
+// in the view hierarchy.
+UIView* FakeOmnibox();
+
 // Returns a matcher, which is true if the view has its width equals to |width|.
 id<GREYMatcher> OmniboxWidth(CGFloat width);
 
 // Returns a matcher, which is true if the view has its width equals to |width|
 // plus or minus |margin|.
 id<GREYMatcher> OmniboxWidthBetween(CGFloat width, CGFloat margin);
+
+// Returns a vector of 10 suggestions.
+std::vector<ntp_snippets::ContentSuggestion> Suggestions();
 }  // namespace ntp_home
 
 namespace ntp_snippets {
