ios/chrome/browser/ui/ntp/new_tab_page_controller.mm
@@ -425,9 +425,9 @@ enum {
 }
 
 - (CGPoint)scrollOffset {
-  if (_currentController == self.homePanel) {
-    return self.contentSuggestionsCoordinator.viewController.collectionView
-        .contentOffset;
+  if (_currentController == self.homePanel &&
+      [self.homePanel respondsToSelector:@selector(scrollOffset)]) {
+    return [self.homePanel scrollOffset];
   }
   return CGPointZero;
 }
